# rqcopt_hpc-matchgate

./: .gitignore  CMakeLists.txt  README.md  benchmark_hess.c  hubbard2d.cmd  matchgate_figures.txt  rqc_bench.cmd  rqc_mpi_bench.cmd  rqc_serial.cmd
benchmark/: benchmark_mpi.c  read_output.py  spinless_hubbard_data.py
benchmark/input_data/: spinless_hubbard_n4_q10_matchgate_init.hdf5  spinless_hubbard_n4_q12_matchgate_init.hdf5  spinless_hubbard_n4_q14_matchgate_init.hdf5  spinless_hubbard_n4_q16_matchgate_init.hdf5  spinless_hubbard_n4_q8_matchgate_init.hdf5  spinless_hubbard_n8_q14_matchgate_init.hdf5
benchmark/output_data/: mp_bench_spinless_hubbard_n4_q12_th28_1101.hdf5  mpi_bench_n4_q16_tasks4_th28_01.hdf5  mpi_bench_n4_q16_tasks4_th28_11.hdf5
benchmark_hpc/: benchmark_grad.c  benchmark_mpi.c  benchmark_serial.c  benchmark_threads.c  benchmark_usplit.c  opm_overhead.c  plot_speedup.py  speedup_map.py  spl_hubbard1d_bench_init.py  spl_hubbard1d_init.py
benchmark_hpc/bench_in/: n13_q16_u253_bench_in.hdf5  n3_q12_u253_bench_in.hdf5  n5_q10_u253_bench_in.hdf5  n5_q12_u253_bench_in.hdf5  n5_q14_u253_bench_in.hdf5  n5_q16_u253_bench_in.hdf5  n5_q8_u253_bench_in.hdf5  n7_q10_u253_bench_in.hdf5  n7_q12_u253_bench_in.hdf5  n9_q12_u253_bench_in.hdf5
benchmark_hpc/bench_in/q10/: n11_q10_u601_bench_in.hdf5  n3_q10_u601_bench_in.hdf5  n5_q10_u601_bench_in.hdf5  n7_q10_u601_bench_in.hdf5
benchmark_hpc/bench_in/q12/: n11_q12_u601_bench_in.hdf5  n13_q12_u601_bench_in.hdf5  n15_q12_u601_bench_in.hdf5  n17_q12_u601_bench_in.hdf5  n19_q12_u601_bench_in.hdf5  n21_q12_u601_bench_in.hdf5  n23_q12_u601_bench_in.hdf5  n25_q12_u601_bench_in.hdf5  n3_q12_u251_bench_in.hdf5  n3_q12_u601_bench_in.hdf5  n5_q12_u1001_bench_in.hdf5  n5_q12_u101_bench_in.hdf5  n5_q12_u151_bench_in.hdf5  n5_q12_u251_bench_in.hdf5  n5_q12_u301_bench_in.hdf5  n5_q12_u401_bench_in.hdf5  n5_q12_u51_bench_in.hdf5  (+14 more)
benchmark_hpc/bench_out/: mpi_bench_n13_q16_u253_tasks2_th112_11.hdf5  n5_q14_u253_th42_010_threads_bench_matchgate.hdf5  n5_q14_u253_th92_010_threads_bench_matchgate.hdf5  n5_q16_u253_th112_110_threads_bench_matchgate.hdf5  n7_q12_u253_th100_110_threads_bench_matchgate.hdf5  n7_q12_u253_th106_110_threads_bench_matchgate.hdf5  n7_q12_u253_th25_110_threads_bench_matchgate.hdf5  n7_q12_u253_th28_110_threads_bench_matchgate.hdf5  n7_q12_u253_th31_110_threads_bench_matchgate.hdf5  n7_q12_u253_th34_110_threads_bench_matchgate.hdf5  n7_q12_u253_th37_110_threads_bench_matchgate.hdf5  n7_q12_u253_th55_110_threads_bench_matchgate.hdf5  n7_q12_u253_th67_110_threads_bench_matchgate.hdf5  n7_q12_u253_th76_110_threads_bench_matchgate.hdf5  n7_q12_u253_th91_110_threads_bench_matchgate.hdf5  n7_q12_u253_th94_110_threads_bench_matchgate.hdf5  n9_q12_u253_th103_110_threads_bench_matchgate.hdf5  n9_q12_u253_th112_110_threads_bench_matchgate.hdf5  n9_q12_u253_th13_110_threads_bench_matchgate.hdf5  n9_q12_u253_th1_110_threads_bench_matchgate.hdf5  n9_q12_u253_th22_110_threads_bench_matchgate.hdf5  n9_q12_u253_th31_110_threads_bench_matchgate.hdf5  n9_q12_u253_th34_110_threads_bench_matchgate.hdf5  n9_q12_u253_th43_110_threads_bench_matchgate.hdf5  n9_q12_u253_th52_110_threads_bench_matchgate.hdf5  n9_q12_u253_th58_110_threads_bench_matchgate.hdf5  n9_q12_u253_th61_110_threads_bench_matchgate.hdf5  n9_q12_u253_th64_110_threads_bench_matchgate.hdf5  n9_q12_u253_th73_110_threads_bench_matchgate.hdf5  n9_q12_u253_th88_110_threads_bench_matchgate.hdf5  n9_q12_u253_th94_110_threads_bench_matchgate.hdf5  n9_q12_u253_th97_110_threads_bench_matchgate.hdf5  plot_layers.py  plot_mpi.py  plot_qubits.py  plot_threads.py  plot_usplit.py  read_mpi.py  read_output.py
examples/hubbard1d/: benchmark_grad.c  benchmark_gradient.c  benchmark_hess.c  hubbard1d_conv.c  hubbard1d_costf.c  hubbard1d_init.py  hubbard1d_opt.c  permutations.py  plot_opt.py  plot_output.py  read_output.py  sparse_targets.py
examples/hubbard2d/: hubbard2d_data.py  splitting.py
examples/spinhubbard/: permutations.py  spinhubbard_data.py  spinhubbard_opt.c
examples/spl_hubbard1d/: correlations.c  correlations.py  fidelity.c  hubbard1d_costf.c  permutations.py  sparse_targets.py  spl_hubbard1d_costf.c  spl_hubbard1d_g4.0_correlations.hdf5  spl_hubbard1d_init.py  spl_hubbard1d_opt.c  splitting.py  target_matrices.py
examples/spl_hubbard2d/: permutations.py  plot_opt.py  read_output.py  spl_hubbard2d.c  spl_hubbard2d_costf.c  spl_hubbard2d_data.py  spl_hubbard2d_init.py  test_inv.c  walltime.py
src/: gate.c  gate.h  matchgate.c  matchgate.h  matchgate_brickwall.c  matchgate_brickwall.h  matchgate_target.c  matchgate_target.h  mg_brickwall_opt.c  mg_brickwall_opt.h  quantum_circuit.c  quantum_circuit.h  trust_region.c  trust_region.h
test/: io_util.py  permutations.py  run_custom_test.c  sparse_targets.py  test_gate.c  test_gate.py  test_invariance.py  test_matchgate.c  test_matchgate.py  test_matchgate_brickwall.c  test_matchgate_brickwall.py  test_matchgate_target.c  test_matchgate_target.py
test/data/: test_apply_matchgate_backward_array_cplx.hdf5  test_apply_matchgate_backward_cplx.hdf5  test_apply_matchgate_brickwall_unitary_cplx.hdf5  test_apply_matchgate_cplx.hdf5  test_apply_matchgate_placeholder_cplx.hdf5  test_apply_matchgate_to_array_cplx.hdf5  test_matchgate_brickwall_unitary_backward_cplx.hdf5  test_matchgate_brickwall_unitary_backward_hessian_cplx.hdf5  test_matchgate_brickwall_unitary_target_cplx.hdf5  test_matchgate_brickwall_unitary_target_gradient_hessian_cplx.hdf5  test_matchgate_brickwall_unitary_target_gradient_vector_hessian_matrix_cplx.hdf5  test_matchgate_circuit_unitary_target_cplx.hdf5  test_matchgate_ti_brickwall_unitary_target_gradient_hessian2_cplx.hdf5  test_matchgate_ti_brickwall_unitary_target_gradient_hessian3_cplx.hdf5  test_matchgate_ti_brickwall_unitary_target_gradient_hessian4_cplx.hdf5  test_matchgate_ti_brickwall_unitary_target_gradient_hessian_cplx.hdf5  test_multiply_matchgate_cplx.hdf5  test_polar_matchgate_factor_cplx.hdf5  test_project_tangent_matchgate_cplx.hdf5  test_real_to_tangent_matchgate_cplx.hdf5
(+1565 files in other folders)
